--- a/Описание.md
+++ b/Описание.md
@@ -52,7 +52,7 @@
 # Пример
 
 ```json
-{
+[{
   "id": "a821e588-6385-4bf0-b120-ec323e4991d7", // UUID логики
   "type": "question_logic_4",
   "surveyId": "8546c6d7-dd90-476c-bba4-b5d7c369e158", // UUID опроса
@@ -63,6 +63,7 @@
       "if": {
         "logic_block_type": "expression",
         "operation": {
+          "logic_block_type": "operation",
           "type": "boolean",
           "operation": "ge", // Проверка: возраст >= 18
           "operands": [
@@ -83,16 +84,17 @@
           "if": {
             "logic_block_type": "expression",
             "operation": {
+              "logic_block_type": "operation",
               "type": "boolean",
               "operation": "answered_with", // Проверка: выбран вариант "мужчина"
               "operands": [
                 {
                   "logic_block_type": "expression",
-                  "questionId": "0328b1ab-000b-4764-9bb5-f8479866fd71" // UUID вопроса "Укажите пол"
+                  "str_value": "0328b1ab-000b-4764-9bb5-f8479866fd71" // UUID вопроса "Укажите пол"
                 },
                 {
                   "logic_block_type": "expression",
-                  "answerOptionId": "0cb37a05-e7ae-47d8-b0ab-6b5429af8e6f" // Значение варианта "мужчина"
+                  "str_value": "0cb37a05-e7ae-47d8-b0ab-6b5429af8e6f" // Значение варианта "мужчина"
                 }
               ]
             }
@@ -125,16 +127,17 @@
           "if": {
             "logic_block_type": "expression",
             "operation": {
+              "logic_block_type": "operation",
               "type": "boolean",
               "operation": "answered_with", // Проверка: выбран вариант "мужчина"
               "operands": [
                 {
                   "logic_block_type": "expression",
-                  "questionId": "0328b1ab-000b-4764-9bb5-f8479866fd71" // UUID вопроса "Укажите пол"
+                  "str_value": "0328b1ab-000b-4764-9bb5-f8479866fd71" // UUID вопроса "Укажите пол"
                 },
                 {
                   "logic_block_type": "expression",
-                  "answerOptionId": "0cb37a05-e7ae-47d8-b0ab-6b5429af8e6f" // Значение варианта "мужчина"
+                  "str_value": "0cb37a05-e7ae-47d8-b0ab-6b5429af8e6f" // Значение варианта "мужчина"
                 }
               ]
             }
@@ -163,5 +166,5 @@
       ]
     }
   ]
-}
+}]
 ```
