--- a/Описание.md
+++ b/Описание.md
@@ -1,16 +1,16 @@
 # Описание
 
 В скрытом вопросе есть 4 варианта ответа:  
-- **"9371f3d2-607e-4ebd-ad1c-6356a3a29b8b"** — Совершеннолетний мужчина.  
-- **"955382ba-6280-4ea7-9769-4419a1619b96"** — Совершеннолетняя женщина.  
-- **"45f7bd18-dffe-41c8-8197-ba8fbe294094"** — Несовершеннолетний мужчина.  
-- **"903ab396-eff3-41f5-840c-a0b4ad9fb1ab"** — Несовершеннолетняя женщина.  
+- **"b5eb1348-d918-4cb6-953a-0cad2a349a02"** — Совершеннолетний мужчина.  
+- **"1acc424c-46aa-4655-8615-99cc84c139d7"** — Совершеннолетняя женщина.  
+- **"b4fdf742-b2dc-4e5f-973f-f29b17429195"** — Несовершеннолетний мужчина.  
+- **"44a42d94-40af-497b-9a55-35fff92d7344"** — Несовершеннолетняя женщина.  
 
 Выбор варианта происходит на основании ответов на два других вопроса:  
 1. **"Укажите возраст"** (тип — *Комментарий* с маской "числа").  
-   - UUID вопроса: **"12278725-5ace-4ef2-8fdb-517129895a58"**.  
+   - UUID вопроса: **"d425ab50-ccb0-41ad-8f35-3dcd4d4e6ab9"**.  
 2. **"Укажите пол"** (тип — *Выбор из списка*).  
-   - UUID вопроса: **"0328b1ab-000b-4764-9bb5-f8479866fd71"**.  
+   - UUID вопроса: **"d7e36d97-f13a-46c2-9df9-fd1b8d9023ad"**.  
 
 ---
 
@@ -27,12 +27,12 @@
 1. Проверяется, указан ли пол как "мужчина".  
    - Проверка:  
      - `operation: "answered_with"`.  
-     - `questionId: "0328b1ab-000b-4764-9bb5-f8479866fd71"`.  
-     - `answerOptionId: "0cb37a05-e7ae-47d8-b0ab-6b5429af8e6f"` (вариант "мужчина").  
+     - `questionId: "d7e36d97-f13a-46c2-9df9-fd1b8d9023ad"`.  
+     - `answerOptionId: "07c01883-3e79-4df6-a641-2d712a43e0ea"` (вариант "мужчина").  
 2. Если **пол = мужчина**, выбирается:  
-   - **"Совершеннолетний мужчина"** (`answerOptionId: "9371f3d2-607e-4ebd-ad1c-6356a3a29b8b"`).  
+   - **"Совершеннолетний мужчина"** (`answerOptionId: "b5eb1348-d918-4cb6-953a-0cad2a349a02"`).  
 3. Если **пол ≠ мужчина**, выбирается:  
-   - **"Совершеннолетняя женщина"** (`answerOptionId: "955382ba-6280-4ea7-9769-4419a1619b96"`).  
+   - **"Совершеннолетняя женщина"** (`answerOptionId: "1acc424c-46aa-4655-8615-99cc84c139d7"`).  
 
 ---
 
@@ -40,39 +40,36 @@
 1. Проверяется, указан ли пол как "мужчина".  
    - Проверка:  
      - `operation: "answered_with"`.  
-     - `questionId: "0328b1ab-000b-4764-9bb5-f8479866fd71"`.  
-     - `answerOptionId: "0cb37a05-e7ae-47d8-b0ab-6b5429af8e6f"` (вариант "мужчина").  
+     - `questionId: "d7e36d97-f13a-46c2-9df9-fd1b8d9023ad"`.  
+     - `answerOptionId: "07c01883-3e79-4df6-a641-2d712a43e0ea"` (вариант "мужчина").  
 2. Если **пол = мужчина**, выбирается:  
-   - **"Несовершеннолетний мужчина"** (`answerOptionId: "45f7bd18-dffe-41c8-8197-ba8fbe294094"`).  
+   - **"Несовершеннолетний мужчина"** (`answerOptionId: "b4fdf742-b2dc-4e5f-973f-f29b17429195"`).  
 3. Если **пол ≠ мужчина**, выбирается:  
-   - **"Несовершеннолетняя женщина"** (`answerOptionId: "903ab396-eff3-41f5-840c-a0b4ad9fb1ab"`).  
+   - **"Несовершеннолетняя женщина"** (`answerOptionId: "44a42d94-40af-497b-9a55-35fff92d7344"`).  
 
 ---
 
 # Пример
 
 ```json
-[{
-  "id": "a821e588-6385-4bf0-b120-ec323e4991d7", // UUID логики
+{
+  "id": "a1b2c3d4-e5f6-7890-ab12-cd34ef56gh78", // UUID логики
   "type": "question_logic_4",
-  "surveyId": "8546c6d7-dd90-476c-bba4-b5d7c369e158", // UUID опроса
-  "questionId": "7e9f0a3e-e68d-4d0b-bd8f-d19dd85a7918", // UUID скрытого вопроса
+  "surveyId": "12345678-90ab-cdef-1234-567890abcdef", // UUID опроса
+  "questionId": "abcd1234-ef56-7890-gh12-ijklmnop3456", // UUID скрытого вопроса
   "logic": [
     {
       "logic_block_type": "if",
       "if": {
         "logic_block_type": "expression",
         "operation": {
-          "logic_block_type": "operation",
           "type": "boolean",
           "operation": "ge", // Проверка: возраст >= 18
           "operands": [
             {
-              "logic_block_type": "expression",
-              "answer_num_value": "12278725-5ace-4ef2-8fdb-517129895a58" // UUID вопроса "Укажите возраст"
+              "questionId": "d425ab50-ccb0-41ad-8f35-3dcd4d4e6ab9" // UUID вопроса "Укажите возраст"
             },
             {
-              "logic_block_type": "expression",
               "num_value": 18
             }
           ]
@@ -84,17 +81,14 @@
           "if": {
             "logic_block_type": "expression",
             "operation": {
-              "logic_block_type": "operation",
               "type": "boolean",
               "operation": "answered_with", // Проверка: выбран вариант "мужчина"
               "operands": [
                 {
-                  "logic_block_type": "expression",
-                  "str_value": "0328b1ab-000b-4764-9bb5-f8479866fd71" // UUID вопроса "Укажите пол"
+                  "questionId": "d7e36d97-f13a-46c2-9df9-fd1b8d9023ad" // UUID вопроса "Укажите пол"
                 },
                 {
-                  "logic_block_type": "expression",
-                  "str_value": "0cb37a05-e7ae-47d8-b0ab-6b5429af8e6f" // Значение варианта "мужчина"
+                  "answerOptionId": "07c01883-3e79-4df6-a641-2d712a43e0ea" // Значение варианта "мужчина"
                 }
               ]
             }
@@ -104,7 +98,7 @@
               "logic_block_type": "answers",
               "content": [
                 {
-                  "answerOptionId": "9371f3d2-607e-4ebd-ad1c-6356a3a29b8b" // UUID варианта "Совершеннолетний мужчина"
+                  "answerOptionId": "b5eb1348-d918-4cb6-953a-0cad2a349a02" // UUID варианта "Совершеннолетний мужчина"
                 }
               ]
             }
@@ -114,7 +108,7 @@
               "logic_block_type": "answers",
               "content": [
                 {
-                  "answerOptionId": "955382ba-6280-4ea7-9769-4419a1619b96" // UUID варианта "Совершеннолетняя женщина"
+                  "answerOptionId": "1acc424c-46aa-4655-8615-99cc84c139d7" // UUID варианта "Совершеннолетняя женщина"
                 }
               ]
             }
@@ -127,17 +121,14 @@
           "if": {
             "logic_block_type": "expression",
             "operation": {
-              "logic_block_type": "operation",
               "type": "boolean",
               "operation": "answered_with", // Проверка: выбран вариант "мужчина"
               "operands": [
                 {
-                  "logic_block_type": "expression",
-                  "str_value": "0328b1ab-000b-4764-9bb5-f8479866fd71" // UUID вопроса "Укажите пол"
+                  "questionId": "d7e36d97-f13a-46c2-9df9-fd1b8d9023ad" // UUID вопроса "Укажите пол"
                 },
                 {
-                  "logic_block_type": "expression",
-                  "str_value": "0cb37a05-e7ae-47d8-b0ab-6b5429af8e6f" // Значение варианта "мужчина"
+                  "answerOptionId": "07c01883-3e79-4df6-a641-2d712a43e0ea" // Значение варианта "мужчина"
                 }
               ]
             }
@@ -147,7 +138,7 @@
               "logic_block_type": "answers",
               "content": [
                 {
-                  "answerOptionId": "45f7bd18-dffe-41c8-8197-ba8fbe294094" // UUID варианта "Несовершеннолетний мужчина"
+                  "answerOptionId": "b4fdf742-b2dc-4e5f-973f-f29b17429195" // UUID варианта "Несовершеннолетний мужчина"
                 }
               ]
             }
@@ -157,7 +148,7 @@
               "logic_block_type": "answers",
               "content": [
                 {
-                  "answerOptionId": "903ab396-eff3-41f5-840c-a0b4ad9fb1ab" // UUID варианта "Несовершеннолетняя женщина"
+                  "answerOptionId": "44a42d94-40af-497b-9a55-35fff92d7344" // UUID варианта "Несовершеннолетняя женщина"
                 }
               ]
             }
@@ -166,5 +157,5 @@
       ]
     }
   ]
-}]
+}
 ```
